# smol-evm

./: Cargo.toml  README.md
src/: execution_context.rs  instruction.rs  instructions.rs  lib.rs  main.rs  memory.rs  opcodes.rs  stack.rs  utils.rs
src/instructions/: branching.rs  execution.rs  maths.rs  memory.rs  stack.rs
