[package]
name = "smol-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.11", default-features = false }
bytes = "1"
hex = "0.4"
strum = "0.24"
strum_macros = "0.24"
ethnum = "1"
ethereum-types = "0.14.0"
arrayvec = "0.7.2"
hex-literal = "0.3.4"